--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ img{
 #cons{
     background-color: black;
     background-position: center;
-    width: 35em;
-    height: 50em;
+    width: 30em;
+    height: 40em;
     margin: 0 auto;
     text-align: center;
     padding-top: 0.6em;
@@ -37,4 +37,38 @@ h3{
 h4{
     font-size: 2em;
     color: rgb(255, 255, 255);
+}
+
+
+
+
+
+
+
+@media only screen and (max-width: 426px) {
+    #cons{
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        padding: 0.6em 0;
+        border-radius: 0;
+    }
+    h1{
+        font-size: 3.5em;
+    }
+    h2{
+        font-size: 2em;
+        color: rgb(218, 236, 252);
+    }
+    
+    h3{
+        font-size: 1em;
+        color: cyan;
+    }
+    
+    h4{
+        font-size: 2em;
+        color: rgb(255, 255, 255);
+    }
 }
