--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@ img{
     background-position: center;
     width: 30em;
     height: 40em;
-    margin: 0 auto;
+    margin: 3em auto;
     text-align: center;
     padding-top: 0.6em;
     border-radius: 60px;
+    margin-top: 3em;
 }
 h1,h2,h3,h4{
     font-family: 'Balsamiq Sans';
@@ -45,7 +46,7 @@ h4{
 
 
 
-@media only screen and (max-width: 426px) {
+@media only screen and (max-width: 501px) {
     #cons{
         background-color: black;
         width: 100%;
@@ -53,6 +54,7 @@ h4{
         text-align: center;
         padding: 0.6em 0;
         border-radius: 0;
+        margin: 0;
     }
     h1{
         font-size: 3.5em;
