--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,10 @@ h4{
     #cons{
         background-color: black;
         width: 100%;
-        height: 100%;
+        height: 700px;
         text-align: center;
         padding: 0.6em 0;
-        border-radius: 0;
+        border-radius: 20px;
         margin: 0;
     }
     h1{
